--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -3,16 +3,49 @@ html
   head
     meta charset="utf-8"
 
-    /! Always force latest IE rendering engine or request Chrome Frame
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
 
     /! Use title if it's in the page YAML frontmatter
     title == data.page.title || "Observation Game"
 
-    == stylesheet_link_tag "http://netdna.bootstrapcdn.com/bootswatch/3.0.3/spacelab/bootstrap.min.css"
+    == stylesheet_link_tag "http://netdna.bootstrapcdn.com/bootswatch/3.0.3/yeti/bootstrap.min.css"
+    css:
+      .btn-lg{
+        font-size: 90%
+      }
+
+      html,
+      body {
+        height: 100%;
+        /* The html and body elements cannot have any padding or margin. */
+      }
+
+      /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto;
+        /* Negative indent footer by its height */
+        margin: 0 auto -80px;
+        /* Pad bottom by footer height */
+        padding: 0 0 80px;
+      }
+
+      /* Set the fixed height of the footer here */
+      #footer {
+        height: 80px;
+        background-color: #f5f5f5;
+        padding-top: 20px
+      }
+      
     == javascript_include_tag "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"
     == javascript_include_tag "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.js"
 
   body
-  == yield
-  == yield_content :javascripts
+    #wrap== yield
+    #footer
+      .container
+          markdown: 
+            A first stab at [AngularJs](http://angularjs.org) by [Mark Holland](http://www.markholland.me)  
+            [Source on Github](https://github.com/allegromanontroppo/observationgame)
+      
+    == yield_content :javascripts
