add lightning and responsive game play widths

--- a/source/data/aircraft.json.erb
+++ b/source/data/aircraft.json.erb
@@ -27,6 +27,9 @@
     -
       name: Eurofighter Typhoon    
       image: http://upload.wikimedia.org/wikipedia/commons/thumb/6/64/RSAF_Typhoon_at_Malta_-_Gordon_Zammit.jpg/800px-RSAF_Typhoon_at_Malta_-_Gordon_Zammit.jpg
+    -
+      name: English Electric Lightning    
+      image: http://upload.wikimedia.org/wikipedia/commons/2/2d/Lightning.inflight.arp.750pix.jpg
      
 ---
 
