--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -9,39 +9,14 @@ html
     title == data.page.title || "Observation Game"
 
     == stylesheet_link_tag "http://netdna.bootstrapcdn.com/bootswatch/3.0.3/yeti/bootstrap.min.css"
-    css:
-      .btn-lg{
-        font-size: 90%
-      }
-
-      html,
-      body {
-        height: 100%;
-        /* The html and body elements cannot have any padding or margin. */
-      }
-
-      /* Wrapper for page content to push down footer */
-      #wrap {
-        min-height: 100%;
-        height: auto;
-        /* Negative indent footer by its height */
-        margin: 0 auto -80px;
-        /* Pad bottom by footer height */
-        padding: 0 0 80px;
-      }
-
-      /* Set the fixed height of the footer here */
-      #footer {
-        height: 80px;
-        background-color: #f5f5f5;
-        padding-top: 20px
-      }
+    == stylesheet_link_tag "styles"
       
     == javascript_include_tag "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"
     == javascript_include_tag "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.js"
 
   body
-    #wrap== yield
+    #wrap
+      #main== yield
     #footer
       .container
           markdown: 
