--- a/source/partials/game-play.html.slim
+++ b/source/partials/game-play.html.slim
@@ -18,20 +18,36 @@ div ng-if="selectedItem"
   .row  
  
     .col-lg-9.col-lg-push-3.col-sm-8.col-sm-push-4
-       img.center-block.img-rounded ng-src="{{ selectedItem.image }}" style="max-height:313px;max-width:100%"
+       img.center-block.img-rounded ng-src="{{ selectedItem.image }}" style="max-height:313px"
  
     .col-lg-3.col-lg-pull-9.col-sm-4.col-sm-pull-8
       .btn-group-vertical.btn-block
         button.btn.btn-default.btn-lg ng-repeat="answer in answers | orderBy:'name'" ng-bind="answer.name" ng-click="onAnswered(answer.name)"
     
 .jumbotron ng-if="gameOver"  
+
+    .row
+      .col-sm-6
   
-    h2 Game Over
-    h3 You scored {{correctAnswerCount}} out of {{items.length}}
-    h4 ng-if="correctAnswerCount === items.length" Excellent work. A clean sweep.
-    h4 ng-if="correctAnswerCount !== items.length && correctAnswerCount > items.length * 0.7 " Very good.
-    h4 ng-if="correctAnswerCount < items.length * 0.3 " Must try harder.
-    h4 ng-if="correctAnswerCount > items.length * 0.3 && correctAnswerCount < items.length * 0.7 " A middling effort.
-    button.btn.btn-default ng-click="reset()" Start Again
-    
+        h2 Game Over
+        h3 You scored {{correctAnswerCount}} out of {{items.length}}
+        h4 ng-if="correctAnswerCount === items.length" Excellent work. A clean sweep.
+        h4 ng-if="correctAnswerCount !== items.length && correctAnswerCount >= items.length * 0.7 " Very good.
+        h4 ng-if="correctAnswerCount > items.length * 0.3 && correctAnswerCount < items.length * 0.7 " A middling effort.
+        h4 ng-if="correctAnswerCount <= items.length * 0.3 " Must try harder.
+        button.btn.btn-primary ng-click="reset()" Start Again
+      
+      .col-sm-6
+      
+        .row ng-repeat="item in items | orderBy:'name'" style="margin-bottom:1em"
+          .col-sm-4
+            img.img-rounded.img-responsive ng-src="{{ item.image }}"
+          .col-sm-8
+            h4 ng-bind="item.name"
+            p ng-switch="item.correct"
+              label.label.label-success.glyphicon.glyphicon-ok ng-switch-when="true" 
+                |  Correct
+              label.label.label-danger.glyphicon.glyphicon-remove [ng-switch-default]    
+                |  Wrong
+  
     
