--- a/source/partials/game-play.html.slim
+++ b/source/partials/game-play.html.slim
@@ -18,7 +18,7 @@ div ng-if="selectedItem"
   .row  
  
     .col-lg-9.col-lg-push-3.col-sm-8.col-sm-push-4
-       img.center-block.img-rounded ng-src="{{ selectedItem.image }}" style="max-height:313px"
+       img.img-responsive.center-block.img-rounded ng-src="{{ selectedItem.image }}" style="max-height:313px"
  
     .col-lg-3.col-lg-pull-9.col-sm-4.col-sm-pull-8
       .btn-group-vertical.btn-block
